fix image crop on mobile

--- a/faq-accordion-card/output.css
+++ b/faq-accordion-card/output.css
@@ -551,8 +551,8 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.relative {
-  position: relative;
+.m-24 {
+  margin: 6rem;
 }
 
 .m-auto {
@@ -563,41 +563,25 @@ video {
   margin: 2.5rem;
 }
 
+.m-16 {
+  margin: 4rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.-mt-\[23\%\] {
-  margin-top: -23%;
 }
 
 .-mt-\[30\%\] {
   margin-top: -30%;
 }
 
+.-mt-\[23\%\] {
+  margin-top: -23%;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.-mt-10 {
-  margin-top: -2.5rem;
-}
-
-.-mt-\[15\%\] {
-  margin-top: -15%;
-}
-
-.-mt-\[20\%\] {
-  margin-top: -20%;
-}
-
-.-mt-\[25\%\] {
-  margin-top: -25%;
-}
-
-.mt-\[20\%\] {
-  margin-top: 20%;
 }
 
 .flex {
@@ -641,16 +625,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-10 {
-  padding: 2.5rem;
-}
-
-.pt-\[30\%\] {
-  padding-top: 30%;
-}
-
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-center {
@@ -664,11 +648,6 @@ video {
 
 .font-bold {
   font-weight: 700;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -735,95 +714,13 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@media (min-width: 768px) {
-  .md\:ml-0 {
+@media (min-width: 1024px) {
+  .lg\:ml-0 {
     margin-left: 0px;
   }
 
-  .md\:-ml-\[30\%\] {
-    margin-left: -30%;
-  }
-
-  .md\:-mt-\[85\%\] {
-    margin-top: -85%;
-  }
-
-  .md\:-mt-\[75\%\] {
-    margin-top: -75%;
-  }
-
-  .md\:-ml-\[40\%\] {
-    margin-left: -40%;
-  }
-
-  .md\:-mt-0 {
-    margin-top: -0px;
-  }
-
-  .md\:h-96 {
-    height: 24rem;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .md\:w-96 {
-    width: 24rem;
-  }
-
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:max-w-4xl {
-    max-width: 56rem;
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
-  .md\:items-center {
-    align-items: center;
-  }
-
-  .md\:overflow-hidden {
-    overflow: hidden;
-  }
-
-  .md\:pt-20 {
-    padding-top: 5rem;
-  }
-
-  .md\:text-left {
-    text-align: left;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:m-0 {
-    margin: 0px;
-  }
-
-  .lg\:-ml-\[40\%\] {
-    margin-left: -40%;
-  }
-
-  .lg\:-mt-\[80\%\] {
-    margin-top: -80%;
-  }
-
-  .lg\:-mt-\[60\%\] {
-    margin-top: -60%;
-  }
-
-  .lg\:-ml-\[15\%\] {
-    margin-left: -15%;
+  .lg\:mr-10 {
+    margin-right: 2.5rem;
   }
 
   .lg\:-mt-0 {
@@ -834,116 +731,28 @@ body {
     margin-left: -30%;
   }
 
-  .lg\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .lg\:-mt-\[85\%\] {
-    margin-top: -85%;
-  }
-
-  .lg\:-ml-\[20\%\] {
-    margin-left: -20%;
-  }
-
-  .lg\:-mt-\[40\%\] {
-    margin-top: -40%;
-  }
-
-  .lg\:-mt-\[90\%\] {
-    margin-top: -90%;
-  }
-
-  .lg\:-mt-\[70\%\] {
-    margin-top: -70%;
-  }
-
   .lg\:-mt-\[75\%\] {
     margin-top: -75%;
-  }
-
-  .lg\:-ml-\[45\%\] {
-    margin-left: -45%;
-  }
-
-  .lg\:-mt-\[10\%\] {
-    margin-top: -10%;
-  }
-
-  .lg\:-mt-\[15\%\] {
-    margin-top: -15%;
-  }
-
-  .lg\:-mt-\[30\%\] {
-    margin-top: -30%;
-  }
-
-  .lg\:mr-10 {
-    margin-right: 2.5rem;
-  }
-
-  .lg\:mr-5 {
-    margin-right: 1.25rem;
-  }
-
-  .lg\:-mt-\[65\%\] {
-    margin-top: -65%;
-  }
-
-  .lg\:-ml-\[39\%\] {
-    margin-left: -39%;
-  }
-
-  .lg\:-ml-\[35\%\] {
-    margin-left: -35%;
-  }
-
-  .lg\:-ml-\[34\%\] {
-    margin-left: -34%;
-  }
-
-  .lg\:-mt-\[68\%\] {
-    margin-top: -68%;
-  }
-
-  .lg\:-mt-\[62\%\] {
-    margin-top: -62%;
-  }
-
-  .lg\:-ml-\[334\%\] {
-    margin-left: -334%;
-  }
-
-  .lg\:-ml-\[33\%\] {
-    margin-left: -33%;
   }
 
   .lg\:-mt-\[91\%\] {
     margin-top: -91%;
   }
 
+  .lg\:-ml-\[33\%\] {
+    margin-left: -33%;
+  }
+
   .lg\:block {
     display: block;
-  }
-
-  .lg\:h-96 {
-    height: 24rem;
-  }
-
-  .lg\:h-80 {
-    height: 20rem;
   }
 
   .lg\:h-auto {
     height: auto;
   }
 
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .lg\:w-96 {
-    width: 24rem;
+  .lg\:w-80 {
+    width: 20rem;
   }
 
   .lg\:w-full {
@@ -954,24 +763,8 @@ body {
     width: 66.666667%;
   }
 
-  .lg\:w-80 {
-    width: 20rem;
-  }
-
-  .lg\:w-3\/4 {
-    width: 75%;
-  }
-
   .lg\:max-w-4xl {
     max-width: 56rem;
-  }
-
-  .lg\:max-w-3xl {
-    max-width: 48rem;
-  }
-
-  .lg\:max-w-xl {
-    max-width: 36rem;
   }
 
   .lg\:flex-row {
@@ -980,23 +773,6 @@ body {
 
   .lg\:items-center {
     align-items: center;
-  }
-
-  .lg\:overflow-hidden {
-    overflow: hidden;
-  }
-
-  .lg\:rounded-3xl {
-    border-radius: 1.5rem;
-  }
-
-  .lg\:bg-white {
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .lg\:p-20 {
-    padding: 5rem;
   }
 
   .lg\:pt-20 {
